# bmstu-cg

./: README.md
lab_01/: addrecorddialog.cpp  coordinatescene.cpp  coordinatescene.h  lab_01.pro  mainwindow.h  myrectf.cpp  myrectf.h  myshapef.cpp  myshapef.h  mytrianglef.cpp  mytrianglef.h  pointrecord.cpp  sceneellipse.cpp  sceneobject.cpp  scenepoint.cpp  scenepoint.h  scenerectangle.cpp  scenerectangle.h  scenetriangle.h  taskpopup.ui
lab_01_29/: .gitignore  CMakeLists.txt  README.md  addrecorddialog.cpp  addrecorddialog.h  addrecorddialog.ui  coordinatescene.cpp  coordinatescene.h  iu7cglabs_kostritsky  lab_01_29.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myrectf.cpp  myrectf.h  myshapef.cpp  myshapef.h  mytrianglef.cpp  mytrianglef.h  pointrecord.cpp  pointrecord.h  pointtableviewmodel.cpp  pointtableviewmodel.h  report-unittesting-old.txt  sceneellipse.cpp  sceneellipse.h  sceneline.cpp  sceneline.h  sceneobject.cpp  sceneobject.h  scenepoint.cpp  scenepoint.h  scenerectangle.cpp  scenerectangle.h  scenetriangle.cpp  scenetriangle.h  taskpopup.cpp  taskpopup.h  taskpopup.ui  (+6 more)
lab_02_29/: .gitignore  CMakeLists.txt  actions.h  application.qrc  coordinatescene.cpp  coordinatescene.h  coverage.sh  house.cpp  house.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myellipsef.cpp  myellipsef.h  myshapef.cpp  myshapef.h  mytrapeziumf.cpp  mytrapeziumf.h  report-functesting-old.txt  report-unittesting-old.txt  sceneellipse.cpp  sceneellipse.h  sceneline.cpp  sceneline.h  sceneobject.h  scenerectangle.cpp  scenerectangle.h  scenetrapezium.cpp  scenetrapezium.h  taskpopup.ui  test.cpp  test.h  testactions.cpp  testactions.h  testparser.cpp  tests.json
lab_03_99/: .gitignore  CMakeLists.txt  build.sh  coordinatescene.cpp  coordinatescene.h  linedrawer.cpp  linedrawer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  operations.cpp  operations.h  report-functesting-old.txt  report-unittesting-old.txt  sceneline.cpp  sceneline.h  sceneobject.cpp  sceneobject.h  steplengthgraph.cpp  steplengthgraph.h  steplengthgraph.ui  taskpopup.cpp  taskpopup.ui  test.cpp  test.h  testlinedrawer.cpp  testlinedrawer.h  testparser.cpp  testparser.h  timecomparison.cpp  timecomparison.h  timecomparison.ui
lab_03_99/func/: tests.json
lab_04_99/: .clang_format  .gitignore  CMakeLists.txt  circledrawer.cpp  circledrawer.h  coordinatescene.cpp  coordinatescene.h  ellipsedrawer.cpp  ellipsedrawer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  report-functesting-old.txt  report-unittesting-old.txt  scenecircle.cpp  scenecircle.h  sceneellipse.cpp  sceneellipse.h  shapeutils.cpp  shapeutils.h  taskpopup.ui  test.cpp  test.h  testdrawing.cpp  testdrawing.h  testparser.cpp  testparser.h
lab_04_99/func/: tests.json
lab_05_03/: CMakeLists.txt  coordinatescene.cpp  coordinatescene.h  fill.cpp  fill.h  iu7cglabs_kostritsky  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointtableviewmodel.cpp  pointtableviewmodel.h  report-functesting-old.txt  report-unittesting-old.txt  taskpopup.ui  test.cpp  test.h  testfill.cpp  testfill.h  testparser.cpp
lab_05_03/func/: tests.json
lab_06_99/: CMakeLists.txt  coordinatescene.cpp  coordinatescene.h  fill.cpp  fill.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointrecord.h  report-functesting-old.txt  report-unittesting-old.txt  taskpopup.ui  test.cpp  test.h  testfill.cpp  testparser.cpp  testparser.h
lab_06_99/func/: tests.json
lab_07_03/: CMakeLists.txt  clipper.cpp  clipper.h  coordinatescene.cpp  coordinatescene.h  linerecord.cpp  linetableviewmodel.cpp  linetableviewmodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  report-functesting-old.txt  report-unittesting-old.txt  taskpopup.ui  test.h  testclip.cpp  testparser.cpp  testparser.h
lab_07_03/func/: tests.json
lab_08_99/: CMakeLists.txt  build.sh  clipper.cpp  clipper.h  coordinatescene.cpp  coordinatescene.h  linerecord.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointrecord.cpp  report-functesting-old.txt  report-unittesting-old.txt  taskpopup.h  taskpopup.ui  test.cpp  testclip.cpp  testclip.h  testparser.cpp  testparser.h
lab_08_99/func/: tests.json
lab_09_99/: CMakeLists.txt  clipper.cpp  clipper.h  coordinatescene.cpp  coordinatescene.h  iu7cglabs_kostritsky  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointrecord.cpp  pointrecord.h  pointtableviewmodel.cpp  report-functesting-old.txt  report-unittesting-old.txt  taskpopup.ui  test.cpp  test.h  testclip.cpp  testparser.cpp  testparser.h
lab_09_99/func/: tests.json
